TGR-552: externalJarOptions sind für externalJar nun auch optional